[gd_scene load_steps=16 format=3 uid="uid://c6r0vvcejbthb"]

[ext_resource type="Script" path="res://Scripts/cvstest.gd" id="1_fdyoq"]
[ext_resource type="Script" path="res://Scripts/Dialogo.gd" id="2_6btu7"]
[ext_resource type="Texture2D" uid="uid://ddxmq1skqlofi" path="res://Sprites/cardbg1.jpg" id="3_ws4t0"]
[ext_resource type="FontFile" uid="uid://cdwav2ai3eo0u" path="res://Fonts/MorrisRomanBlack.ttf" id="4_aoas3"]
[ext_resource type="Texture2D" uid="uid://brc1kibopukjm" path="res://Sprites/button.png" id="6_c40fq"]
[ext_resource type="PackedScene" uid="uid://bogmqbat6i0l3" path="res://Pref/card.tscn" id="6_fg0nq"]
[ext_resource type="Texture2D" uid="uid://b080qufyf6kmh" path="res://Sprites/Cap1/Chemtective1.png" id="6_r31ui"]
[ext_resource type="Script" path="res://Scenes/UIControl.gd" id="6_uip2p"]
[ext_resource type="Texture2D" uid="uid://vufehw05hny4" path="res://Sprites/Pressed.png" id="7_hucs5"]
[ext_resource type="Texture2D" uid="uid://dbdwtxvf8qgx6" path="res://Sprites/hover.png" id="8_krfug"]
[ext_resource type="Texture2D" uid="uid://bcitlc66625pq" path="res://Sprites/bg2.jpg" id="10_p33la"]
[ext_resource type="Script" path="res://Scenes/MenuControl.gd" id="10_phr34"]

[sub_resource type="Animation" id="Animation_kvi7l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(240.987, 398)]
}

[sub_resource type="Animation" id="Animation_iftp7"]
resource_name = "esperando"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(240.987, 398), Vector2(240.987, 390), Vector2(240.987, 398)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b8vb7"]
_data = {
"RESET": SubResource("Animation_kvi7l"),
"esperando": SubResource("Animation_iftp7")
}

[node name="Chemtective" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fdyoq")
metadata/_edit_vertical_guides_ = []

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0319824
offset_bottom = 0.271851
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_6btu7")
metadata/_edit_group_ = true

[node name="BgColor" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.709804, 0.603922, 0.211765, 1)

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.20368, 0.176845, 0.109652, 1)

[node name="ColorRect2" type="ColorRect" parent="Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.8
offset_bottom = 3.34467
grow_horizontal = 2
grow_vertical = 2
color = Color(0.862745, 0.87451, 0.690196, 1)

[node name="Dialogo1" type="RichTextLabel" parent="Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.01
anchor_right = 0.95
anchor_bottom = 0.194
theme_override_fonts/normal_font = ExtResource("4_aoas3")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[color=#000000] adsadjk[/color] ashdkashjkhkjhasjkhdjksah djkashdkjashkjdhaskjdhaskjhds sad asd sad asd sad asd asd sd as dsad sadsadasm febbkjhh kja hdkah jk khwklj hkjhs jkhd jkash  jkdhw jkah kjdhsajkh djkash "
scroll_active = false
autowrap_mode = 1

[node name="Dialogo2" type="RichTextLabel" parent="Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.806
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 11.6677
offset_right = -12.488
offset_bottom = -12.0549
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("4_aoas3")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[color=#000000] adsadjk[/color] ashdkashjkhkjhasjkhdjksah djkashdkjashkjdhaskjdhaskjhds sad asd sad asd sad asd asd sd as dsad sadsadasm febbkjhh kja hdkah jk khwklj hkjhs jkhd jkash  jkdhw jkah kjdhsajkh djkash "
scroll_active = false

[node name="next" type="TextureRect" parent="Control/Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.998
anchor_right = 1.0
anchor_bottom = 0.998
offset_left = -839.045
offset_top = -1518.43
offset_right = -769.045
offset_bottom = -1445.43
texture = ExtResource("3_ws4t0")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Panel/next"]
libraries = {
"": SubResource("AnimationLibrary_b8vb7")
}

[node name="bankCard" parent="Control/Panel" instance=ExtResource("6_fg0nq")]
layout_mode = 0
offset_left = 542.0
offset_top = 962.0
offset_right = 542.0
offset_bottom = 962.0

[node name="currentCard" parent="Control/Panel" instance=ExtResource("6_fg0nq")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.511
anchor_top = 0.5
anchor_right = 0.511
anchor_bottom = 0.5
offset_left = -7.8963
offset_top = 2.86414
offset_right = -7.8963
offset_bottom = 2.86414
grow_horizontal = 2
grow_vertical = 2

[node name="Front" parent="Control/Panel/currentCard" index="1"]
position = Vector2(22, 508)

[node name="Content" parent="Control/Panel/currentCard/Front" index="0"]
position = Vector2(-15.7908, -502.791)
scale = Vector2(0.846, 0.846)
texture = ExtResource("6_r31ui")

[node name="RespDer" parent="Control/Panel/currentCard/Front/Content" index="0"]
position = Vector2(737.608, -700)
scale = Vector2(1.76, 1.76)

[node name="txtRespDer" parent="Control/Panel/currentCard/Front/Content/RespDer" index="0"]
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true

[node name="RespIzq" parent="Control/Panel/currentCard/Front/Content" index="1"]
position = Vector2(-649.535, -700)
scale = Vector2(1.76, 1.76)

[node name="txtRespIzq" parent="Control/Panel/currentCard/Front/Content/RespIzq" index="0"]
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true

[node name="IU" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_uip2p")

[node name="HUD" type="Control" parent="IU"]
layout_mode = 1
anchor_right = 0.93
anchor_bottom = 2.981
offset_right = -0.360107
offset_bottom = 0.31189
grow_horizontal = 2
grow_vertical = 2

[node name="btnMenu" type="TextureButton" parent="IU/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -68.0
offset_top = 10.0
offset_right = -13.0
offset_bottom = 65.0
grow_horizontal = 0
texture_normal = ExtResource("6_c40fq")
texture_pressed = ExtResource("7_hucs5")
texture_hover = ExtResource("8_krfug")
ignore_texture_size = true
stretch_mode = 0

[node name="Menu" type="Control" parent="IU"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_phr34")

[node name="bgMenu" type="TextureRect" parent="IU/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_p33la")
expand_mode = 1

[node name="Panel" type="Panel" parent="IU/Menu/bgMenu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 143.0
offset_top = 116.0
offset_right = -190.0
offset_bottom = -174.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuText" type="RichTextLabel" parent="IU/Menu/bgMenu/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.5
offset_top = -672.0
offset_right = 140.5
offset_bottom = -557.0
scale = Vector2(1.68194, 1.68194)
pivot_offset = Vector2(127.829, 55.2934)
theme_override_font_sizes/normal_font_size = 78
bbcode_enabled = true
text = "Menu"
scroll_active = false
context_menu_enabled = true
text_direction = 3

[node name="VolText" type="RichTextLabel" parent="IU/Menu/bgMenu/Panel"]
layout_mode = 0
offset_left = 204.0
offset_top = 470.0
offset_right = 369.0
offset_bottom = 517.0
scale = Vector2(2.23737, 2.23737)
theme_override_font_sizes/normal_font_size = 34
text = "Volumen"

[node name="volSlider" type="HSlider" parent="IU/Menu/bgMenu/Panel"]
layout_mode = 0
offset_left = 186.0
offset_top = 571.0
offset_right = 498.0
offset_bottom = 615.0
scale = Vector2(1.22666, 2.08736)
value = 100.0

[node name="Continuar" type="Button" parent="IU/Menu/bgMenu/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.28
anchor_top = 0.5
anchor_right = 0.658
anchor_bottom = 0.594
offset_left = 27.84
offset_top = 3.0
offset_right = 27.6576
offset_bottom = 9.27039
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 34
text = "Continuar"

[node name="Salir" type="Button" parent="IU/Menu/bgMenu/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.28
anchor_top = 0.5
anchor_right = 0.658
anchor_bottom = 0.594
offset_left = 22.84
offset_top = 270.0
offset_right = 22.6576
offset_bottom = 276.27
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 34
text = "Salir"

[connection signal="pressed" from="IU/HUD/btnMenu" to="IU" method="_on_btn_menu_pressed"]
[connection signal="value_changed" from="IU/Menu/bgMenu/Panel/volSlider" to="IU/Menu" method="_on_vol_slider_value_changed"]
[connection signal="pressed" from="IU/Menu/bgMenu/Panel/Continuar" to="IU" method="_on_continuar_pressed"]
[connection signal="pressed" from="IU/Menu/bgMenu/Panel/Salir" to="IU/Menu" method="_on_salir_pressed"]

[editable path="Control/Panel/currentCard"]
